istio/attribute-gen.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: istio-attributegen-filter
spec:
  workloadSelector:
    labels:
      app: productpage
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      proxy:
        proxyVersion: '1\.6.*'
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
            subFilter:
              name: "istio.stats"
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.attributegen
        typed_config:
          "@type": type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
          value:
            config:
              configuration: >
                {
                  "attributes": [
                    {
                      "output_attribute": "istio_responseClass",
                      "match": [
                        {
                          "value": "2xx",
                          "condition": "response.code >= 200 && response.code <= 299"
                        },
                        {
                          "value": "3xx",
                          "condition": "response.code >= 300 && response.code <= 399"
                        },
                        {
                          "value": "404",
                          "condition": "response.code == 404"
                        },
                        {
                          "value": "429",
                          "condition": "response.code == 429"
                        },
                        {
                          "value": "503",
                          "condition": "response.code == 503"
                        },
                        {
                          "value": "5xx",
                          "condition": "response.code >= 500 && response.code <= 599"
                        },
                        {
                          "value": "4xx",
                          "condition": "response.code >= 400 && response.code <= 499"
                        }
                      ]
                    }
                  ]
                }
              vm_config:
                runtime: envoy.wasm.runtime.null
                code:
                  local: { inline_string: "envoy.wasm.attributegen" }
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      proxy:
        proxyVersion: '1\.6.*'
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
            subFilter:
              name: "istio.stats"
    patch:
          operation: INSERT_BEFORE
          value:
            name: istio.attributegen
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  configuration: |
                    {
                      "attributes": [
                        {
                          "output_attribute": "istio_operationId",
                          "match": [
                            {
                              "value": "getRootResource",
                              "condition": "request.url_path.matches('^/$') && request.method == 'GET'"
                            }
                          ]
                        }
                      ]
                    }
                  vm_config:
                    runtime: envoy.wasm.runtime.null
                    code:
                      local: { inline_string: "envoy.wasm.attributegen" }
